Fixed AOS animation overflow.

--- a/styles/pages/projects.module.css
+++ b/styles/pages/projects.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .projectsContainer > span {
